# germanCreditFairness

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
conf/: decisions.yaml  preprocessing_strategies.yaml  train.yaml
notebooks/: data exploration.ipynb  interim_presentation.ipynb  interim_presentation_sven.ipynb  scratch_sven.ipynb
src/adsssds_project/: data.py  plots.py
src/germanCreditFairness/: check_columns.py  data.py  decision_functions.py  main.py  plot_functions.py  preprocessings_decisions.py  replacements.yml  utils.py
