[project]
name = "adsssds_project"
version = "0.1.0"
description = "A project from ST2025 in Advanced Methods in Social Statistics and Social Data Science."
authors = [
    { name = "Sven Maurice Morlock" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]